add search in GetMembers
