# src/docs/swagger.json
@@ -727,6 +727,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "Search username",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "Chat id to get members from",
                         "name": "chat_id",
